force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__LoyaltyJournalType__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyJournalType__c</fullName>
    <label>Loyalty Journal Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyJournalType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>