force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__LoyaltyProgramMemberId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyProgramMemberId__c</fullName>
    <label>Loyalty Program Member</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyProgramMemberId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>