force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__PaymentMethodStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentMethodStatus__c</fullName>
    <label>Payment Method Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentMethodStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>