force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__rel_1697761177332_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761177332_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual_Id_map_Voucher_PartyId_N__rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Individual_Id_map_Voucher_PartyId_N__rel</relationshipLabel>
    <relationshipName>rel_1697761177332_end</relationshipName>
    <type>Lookup</type>
</CustomField>