force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__rel_1697761179660_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761179660_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyJournalSubtype_Id_map_Voucher_rel</label>
    <referenceTo>ssot__LoyaltyJournalSubtype__dlm</referenceTo>
    <relationshipLabel>LoyaltyJournalSubtype_Id_map_Voucher_rel</relationshipLabel>
    <relationshipName>rel_1697761179660_end</relationshipName>
    <type>Lookup</type>
</CustomField>