force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__UsedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__UsedDate__c</fullName>
    <label>Used Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UsedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>