force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__VoucherCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoucherCodeText__c</fullName>
    <label>Voucher Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoucherCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>