force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__VoucherDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoucherDefinitionId__c</fullName>
    <label>Voucher Definition</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoucherDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>