force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__VoucherType__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoucherType__c</fullName>
    <label>[DoNotUse]Voucher Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoucherType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>