force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__VoucherTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoucherTypeId__c</fullName>
    <label>Voucher Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoucherTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>